fix text alignment of time units presented of the count down clock

--- a/frontend/scss/page.scss
+++ b/frontend/scss/page.scss
@@ -126,6 +126,7 @@
             font-size: 1em;
             font-style: normal;
             font-weight: 600;
+            text-align: center;
         }
     }
     .separator {
